adding first flink job

--- a/data-producer/conf/env.conf.sample
+++ b/data-producer/conf/env.conf.sample
@@ -1,6 +1,6 @@
 PROJECT_NAME="my_project_name"
 SERVICE_NAME="my_kafka_service_name"
-TOPIC="my_topic_name"
+TOPIC="cpu_load_stats_real"
 PARTITIONS=2
 REPLICATION=2
 NR_MESSAGES=200
